tests/baselines/reference/class1.errors.txt
==== tests/cases/compiler/class1.ts (1 errors) ====
    interface foo{ }
    class foo{ }
          ~~~
!!! error TS2000: Duplicate identifier 'foo'.